--- a/templates/plain/select.html
+++ b/templates/plain/select.html
@@ -25,7 +25,7 @@ elseif($search[0] == '=' && $search[strlen($search)-1] == '=')
 }
 $this->assign('parts', $parts);
 {/php}
-{if $smarty.request.detail == 0 || $smarty.request.detail == 1 || $smarty.request.detail == 2}
+{if isset($smarty.session.settings.template.view) eq false or $smarty.session.settings.template.view eq "dash"}
 	There are {$total_count} result(s).<br />
 	{assign var=page value=$smarty.request.start|intval}
 	{assign var=item_count value=$files|@count}
@@ -45,23 +45,20 @@ $this->assign('parts', $parts);
 			{/if}
 			<input type="radio" name="item[{$files[file].id}]" value="on" {if $item_selected}checked="checked"{/if} />
 			<input type="radio" name="item[{$files[file].id}]" value="off" {if !$item_selected}checked="checked"{/if} />
-            {if $smarty.request.detail < 2}
-                {if $files[file].Filetype=="FOLDER" || 
-                	($files[file].Filepath|@handles:'archive' && $smarty.request.cat != $prefix|cat:'archive') || 
-                    ($files[file].Filepath|@handles:'playlist' && $smarty.request.cat != $prefix|cat:'playlist') || 
-                    ($files[file].Filepath|@handles:'diskimage' && $smarty.request.cat != $prefix|cat:'diskimage')
-                }<a href="?dir={$files[file].Filepath|urlencode|htmlspecialchars}{if $files[file].Filepath|@handles:'archive'}&cat={$prefix}archive{elseif $files[file].Filepath|@handles:'diskimage'}&cat={$prefix}diskimage{elseif $files[file].Filepath|@handles:'playlist'}&cat={$prefix}playlist{else}&cat={$smarty.request.cat}{/if}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
-                {elseif $files[file].Filepath|@handles:'archive'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}archive.php/{$smarty.request.cat}/{$files[file].id}/OUT/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
-                {elseif $files[file].Filepath|@handles:'diskimage'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$prefix}diskimage/{$files[file].id}/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
-                {elseif $files[file].Filepath|@handles:'image_browser'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$prefix}image_browser/{$files[file].id}/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
-                {else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$smarty.request.cat}/{$files[file].id}/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>{/if}
-            {elseif $smarty.request.detail == 2}
-				{foreach from=$smarty.session.columns item=column_value}
-					{if isset($files[file].$column_value)}
-						- {$files[file].$column_value}
-					{/if}
-				{/foreach}
-			{/if}
+			{if $files[file].Filetype=="FOLDER" || 
+				($files[file].Filepath|@handles:'archive' && $smarty.request.cat != $prefix|cat:'archive') || 
+				($files[file].Filepath|@handles:'playlist' && $smarty.request.cat != $prefix|cat:'playlist') || 
+				($files[file].Filepath|@handles:'diskimage' && $smarty.request.cat != $prefix|cat:'diskimage')
+			}<a href="?dir={$files[file].Filepath|urlencode|htmlspecialchars}{if $files[file].Filepath|@handles:'archive'}&cat={$prefix}archive{elseif $files[file].Filepath|@handles:'diskimage'}&cat={$prefix}diskimage{elseif $files[file].Filepath|@handles:'playlist'}&cat={$prefix}playlist{else}&cat={$smarty.request.cat}{/if}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
+			{elseif $files[file].Filepath|@handles:'archive'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}archive.php/{$smarty.request.cat}/{$files[file].id}/OUT/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
+			{elseif $files[file].Filepath|@handles:'diskimage'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$prefix}diskimage/{$files[file].id}/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
+			{elseif $files[file].Filepath|@handles:'image_browser'}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$prefix}image_browser/{$files[file].id}/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>
+			{else}<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}file.php/{$smarty.request.cat}/{$files[file].id}/{$files[file].Filename}">{$parts|@preg_replace:'<b>$0</b>':$files[file].Filepath}</a>{/if}
+			{foreach from=$smarty.session.columns item=column_value}
+				{if isset($files[file].$column_value)}
+					- {$files[file].$column_value}
+				{/if}
+			{/foreach}
             - Download:
             	<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip.php/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a> :
                 <a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt.php/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a>
@@ -86,7 +83,7 @@ $this->assign('parts', $parts);
 		<input name="select" type="submit" value="Save" /><input type="reset" value="Reset" /><br />
 	</form>
 	{include file=$templates.TEMPLATE_PAGES}<br />
-{elseif $smarty.request.detail == 3}
+{elseif $smarty.session.settings.template.view eq "mono"}
 	There are {$total_count} result(s).<br />
 	{assign var=page value=$smarty.request.start|intval}
 	{assign var=item_count value=$files|@count}
@@ -140,48 +137,7 @@ $this->assign('parts', $parts);
 		<input name="select" type="submit" value="Save" /><input type="reset" value="Reset" /><br />
 	</form>
 	{include file=$templates.TEMPLATE_PAGES}<br />
-{elseif $smarty.request.detail == 4}
-	There are {$total_count} result(s).<br />
-	{assign var=page value=$smarty.request.start|intval}
-	{assign var=item_count value=$files|@count}
-	Displaying items {$smarty.request.start} to {$page+$item_count}.
-	<form name="select" action="" method="post">
-		<input type="submit" name="select" value="All" /><input type="submit" name="select" value="None" /><br />
-		<table class="select_list">
-			<thead>
-				<td>On/Off</td>
-{assign var=columns value=$smarty.session.columns}{assign var=column_count value=$columns|@count}
-{foreach name=columns from=$columns item=column_value}{assign var=items_after value=''}{assign var=items_before value=''}
-{section name=link_column loop=$columns}
-{assign var=item_after value=$smarty.section.link_column.index-1}{assign var=item_before value=$smarty.section.link_column.index+1}
-{if $columns[link_column] neq $column_value}
-{if $column_value eq $columns.$item_after}{assign var=items_after value=$items_after|cat:$columns[link_column]|cat:","|cat:$column_value|cat:","}
-{else}{assign var=items_after value=$items_after|cat:$columns[link_column]|cat:","}{/if}
-{if $column_value eq $columns.$item_before}{assign var=items_before value=$items_before|cat:$column_value|cat:","|cat:$columns[link_column]|cat:","}
-{else}{assign var=items_before value=$items_before|cat:$columns[link_column]|cat:","}{/if}
-{/if}
-{/section}
-{assign var=column_link_len value=$items_before|strlen}{assign var=items_before value=$items_before|substr:0:$column_link_len-1}{assign var=column_link_len value=$items_after|strlen}{assign var=items_after value=$items_after|substr:0:$column_link_len-1}
-				<td>{if $smarty.foreach.columns.index > 0}<a href="{$smarty.server.PHP_SELF}?column={$items_before}&display=">&lt;</a> {/if}{if isset($display.order) && $display.order eq $column_value}{$column_value}{else}<a href="{$smarty.server.PHP_SELF}?order={$column_value}&display=">{$column_value}</a>{/if}{if $smarty.foreach.columns.index < $column_count-1} <a href="{$smarty.server.PHP_SELF}?column={$items_after}&display=">&gt;</a>{/if}</td>
-{/foreach}
-				<td>Download</td>
-			</thead>
-{section name=file loop=$files}
-			<tr>
-{if isset($smarty.session.selected)}{assign var=item_selected value=$files[file].id|in_array:$smarty.session.selected}
-{else}{assign var=item_selected value=false}{/if}
-				<td><input type="radio" name="item[{$files[file].id}]" value="on" {if $item_selected}checked="checked"{/if} /><input type="radio" name="item[{$files[file].id}]" value="off" {if !$item_selected}checked="checked"{/if} /></td>
-{foreach from=$smarty.session.columns item=column_value}
-				<td>{if isset($files[file].$column_value)}{$files[file].$column_value}{/if}</td>
-{/foreach}
-				<td><a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}zip.php/{$smarty.request.cat}/{$files[file].id}/Files.zip">zip</a>:<a href="/{$smarty.const.HTML_ROOT}{$smarty.const.HTML_PLUGINS}bt.php/{$smarty.request.cat}/{$files[file].id}/Files.torrent">torrent</a></td>
-			</tr>
-{/section}
-		</table>
-		<input name="select" type="submit" value="Save" /><input type="reset" value="Reset" /><br />
-	</form>
-	{include file=$templates.TEMPLATE_PAGES}<br />
-{elseif $smarty.request.detail == 5}
+{elseif $smarty.session.settings.template.view eq "table"}
 	There are {$total_count} result(s).<br />
 	{assign var=page value=$smarty.request.start|intval}
 	{assign var=item_count value=$files|@count}
