--- a/templates/plain/query.html
+++ b/templates/plain/query.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
+<meta name="google" value="notranslate" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>Media Server Query</title>
 </head>
 
-<body>
+<body class="notranslate">
 <span style="font-weight:bold; color:#F00;">{$error}</span>
 {include file=$templates.TEMPLATE_ADDRESS}
 {include file=$templates.TEMPLATE_SEARCH}<br />
